// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <div
    class="sc-gzVnrw ihHoGK"
  >
    <button
      class="sc-ifAKCX gvbYnD"
      size="2"
      type="button"
    />
    <ul
      class="sc-htoDjs dwgwtr"
      data-testid="dropdown"
    />
  </div>
</div>
`;

exports[`renders dropdown 1`] = `
<div>
  <div
    class="sc-gzVnrw ihHoGK"
  >
    <button
      class="sc-ifAKCX gvbYnD"
      size="2"
      type="button"
    >
      <p
        class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
      >
        Example
      </p>
    </button>
    <ul
      class="sc-htoDjs kDgjik"
      data-testid="dropdown"
    >
      <a
        class="sc-bxivhb khTHXI"
        href="http://www.google.pl"
        size="2"
        target="_blank"
      >
        <test-file-stub
          classname="sc-EHOje cmLHsF"
        />
        <p
          class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
        >
          I open Google in new tab
        </p>
      </a>
    </ul>
  </div>
</div>
`;
